2009-11-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32GState.m: first hack at GSReadRect implementation.

2009-11-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerWindow.m (setWindowHintsForStyle): Revert
	change to (Motif) window style hints that would add a border
	around appicons and miniwindows on some window managers.

	* Source/x11/XGServerWindow.m (-miniwindow): Remove code that can
	make programs unresponsive during window miniaturization.

2009-10-31 Thomas Gamper <icicle@cg.tuwien.ac.at>

	* Source/x11/XGGLFormat.m
	Check explicitly for GLX_SAMPLES and GLX_SAMPLE_BUFFERS.

2009-10-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m (-_fillRect:withPattern:): Convert the
	drawing coordinate back in user space.

2009-10-28 Thomas Gamper <icicle@cg.tuwien.ac.at>

	* Source/x11/XGGLFormat.m
	Check for GLX_VERSION_1_4.

2009-10-28 Riccardo Mottola <rmottola@users.sf.net>

	* Source/x11/XGGLFormat.m
	cleaned up c99-isms
	
2009-10-25 Thomas Gamper <icicle@cg.tuwien.ac.at>

	* Source/x11/XGServerWindow.m
	Implement setMouseLocation:onScreen:.

2009-10-25 Thomas Gamper <icicle@cg.tuwien.ac.at>

	* Source/x11/XGGLContext.m
	* Source/x11/XGGLFormat.m
	* Headers/x11/XGOpenGL.h
	Clean up OpenGL stuff, reformat code and add Multisampling
	support.

2009-10-23 Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSContext.m,
	* Headers/gsc/GSGStateOps.h,
	* Source/gsc/GSGState.m: Empty definitions of gradient methods.
	* Source/cairo/CairoGState.m: Simple cairo gradient implementation.

2009-10-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32GState.m: Small correction of last change.

2009-10-19 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gsc/GSGStateOps.h,
	* Source/gsc/GSGState.m,
	* Source/art/path.m,
	* Source/art/ARTGState.m,
	* Source/cairo/CairoGState.m,
	* Source/xlib/XGGState.m,
	* Source/winlib/WIN32GState.m: Implement pattern colours for all backends.

2009-10-18 Richard Frith-Macdonald <rfm@gnu.org>
