@@ -1,3 +1,8 @@
+2009-11-03 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/cairo/CairoGState.m (-compositeGState:...): Use the
+	offset adjustment for cairo > 1.8 in the general case.
+
 2009-11-01 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/winlib/WIN32GState.m: first hack at GSReadRect implementation.
